Setup kanit font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,6 +127,8 @@
   --color-kitty-blue-light: #9dcaf8;
   --color-kitty-pink: #f8b1c8;
   --color-kitty-pink-hot: #f692b2;
+
+  --font-kanit: var(--font-kanit);
 }
 
 @layer base {
