--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,3 +139,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .bg-radial {
+    background: radial-gradient(rgb(100, 100, 100, 0.6), rgb(0, 0, 0, 0) 75%);
+  }
+}
